feat: change time format

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -109,8 +109,8 @@ interval=30
 # Date Time
 #
 [time]
-command=date '+%Y-%m-%d %H:%M:%S'
-interval=1
+command=date '+%d %h %I:%M %p'
+interval=30
 
 # Generic media player support
 #
