--- a/.config/i3/config
+++ b/.config/i3/config
@@ -200,6 +200,7 @@ for_window [class="^.*"] border normal 0
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+        mode hide
         status_command i3blocks -c ~/.config/i3/i3blocks.conf
         colors {
           background $bg-color
