--- a/.config/i3/config
+++ b/.config/i3/config
@@ -228,10 +228,11 @@ bindsym XF86MonBrightnessDown exec --no-startup-id sudo brightnessctl set 50- &&
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && dunstify --hints=int:value:"$(pactl get-sink-volume @DEFAULT_SINK@ | grep "Volume:" | awk 'NR==1 {print $5}' | sed 's/[^0-9]*//g')" -u low -r 2593 -t 2000 " ++Volume" && $refresh_i3status 
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && dunstify --hints=int:value:"$(pactl get-sink-volume @DEFAULT_SINK@ | grep "Volume:" | awk 'NR==1 {print $5}' | sed 's/[^0-9]*//g')" -u low -r 2593 -t 2000 " --Volume" && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && dunstify -u low -r 2593 -t 2000 " $(pactl get-sink-mute @DEFAULT_SINK@)" && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && dunstify -u low -r 2593 -t 2000 " $(pactl get-source-mute @DEFAULT_SOURCE@)" && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id /home/roundspecs/dotfiles/.config/i3/audio_control.sh raise
+bindsym XF86AudioLowerVolume exec --no-startup-id /home/roundspecs/dotfiles/.config/i3/audio_control.sh lower
+bindsym XF86AudioMute exec --no-startup-id /home/roundspecs/dotfiles/.config/i3/audio_control.sh mute
+bindsym XF86AudioMicMute exec --no-startup-id /home/roundspecs/dotfiles/.config/i3/audio_control.sh mic-mute
+
 
 # Browser setup
 bindsym $mod+b exec brave-browser
